@@ -19,11 +19,4 @@ libgnulib_la_SOURCES = 	\
 	g-gnulib.h
 
 
-EXTRA_DIST = makefile.msc
-
-
-
-
-
-
-
+EXTRA_DIST += makefile.msc
